@@ -1,3 +1,8 @@
+2013-07-09  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/51786
+	* g++.dg/cpp0x/pr51786.C: New.
+
 2013-07-08  Janis Johnson  <janisjo@codesourcery.com>
 
 	* gcc.target/powerpc/tfmode_off.c: Skip for EABI targets.
